--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     positions[i*numSlices*3+j*3+1] = Math.sin(lat);
                     positions[i*numSlices*3+j*3+2] = Math.cos(lat) * Math.sin(Math.PI * 2 * j / numSlices);
                     
-                    textureCoordinates[i*numSlices*2+j*2] = j / numSlices;
+                    textureCoordinates[i*numSlices*2+j*2] = 1 - j / numSlices;
                     textureCoordinates[i*numSlices*2+j*2+1] = i / numLayers;
                 }
             }
@@ -240,7 +240,7 @@
 
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-            const fieldOfView = Math.PI / 4;
+            const fieldOfView = Math.PI / 8;
             const aspect = gl.canvas.clientWidth / gl.canvas.clientHeight;
             const zNear = 0.1;
             const zFar = 100.0;
@@ -255,9 +255,9 @@
             const modelViewMatrix = mat4.create();
 
             mat4.translate(modelViewMatrix, modelViewMatrix, [-0.0, 0.0, -6.0]);
-            mat4.rotate(modelViewMatrix, modelViewMatrix, cubeRotation*Math.PI/180, [0, 0, 1]);
+            //mat4.rotate(modelViewMatrix, modelViewMatrix, cubeRotation*Math.PI/180, [0, 0, 1]);
+            mat4.rotate(modelViewMatrix, modelViewMatrix, Math.PI/4*Math.sin(cubeRotation*Math.PI/180 * 0.2), [1, 0, 0]);
             mat4.rotate(modelViewMatrix, modelViewMatrix, cubeRotation*Math.PI/180 * 0.6, [0, 1, 0]);
-            mat4.rotate(modelViewMatrix, modelViewMatrix, cubeRotation*Math.PI/180 * 0.2, [1, 0, 0]);
 
             const normalMatrix = mat4.create();
 
