--- a/index.html
+++ b/index.html
@@ -184,26 +184,26 @@
             var lon = 0;
 
             for (var i = 0; i < numLayers + 1; i++){
-                for (var j = 0; j < numSlices; j++){
+                for (var j = 0; j < numSlices + 1; j++){
                     lat = Math.PI / 2 * (1 - 2 * i / numLayers);
                     lon = Math.PI * 2 * j / numSlices;
-                    positions[i*numSlices*3+j*3] = Math.cos(lat) * Math.cos(lon);
-                    positions[i*numSlices*3+j*3+1] = Math.sin(lat);
-                    positions[i*numSlices*3+j*3+2] = Math.cos(lat) * Math.sin(Math.PI * 2 * j / numSlices);
+                    positions[i*(numSlices+1)*3+j*3] = Math.cos(lat) * Math.cos(lon);
+                    positions[i*(numSlices+1)*3+j*3+1] = Math.sin(lat);
+                    positions[i*(numSlices+1)*3+j*3+2] = Math.cos(lat) * Math.sin(Math.PI * 2 * j / numSlices);
                     
-                    textureCoordinates[i*numSlices*2+j*2] = 1 - j / numSlices;
-                    textureCoordinates[i*numSlices*2+j*2+1] = i / numLayers;
+                    textureCoordinates[i*(numSlices+1)*2+j*2] = 1 - j / numSlices;
+                    textureCoordinates[i*(numSlices+1)*2+j*2+1] = i / numLayers;
                 }
             }
 
             for (var i = 0; i < numLayers; i++){
                 for (var j = 0; j < numSlices; j++){
-                    indices[i*numSlices*6+j*6] = i*numSlices+j;
-                    indices[i*numSlices*6+j*6+1] = (i+1)*numSlices+j;
-                    indices[i*numSlices*6+j*6+2] = (i+1)*numSlices+j+1 - (j == numSlices - 1 ? numSlices : 0);
-                    indices[i*numSlices*6+j*6+3] = i*numSlices+j;
-                    indices[i*numSlices*6+j*6+4] = i*numSlices+j+1 - (j == numSlices - 1 ? numSlices : 0);
-                    indices[i*numSlices*6+j*6+5] = (i+1)*numSlices+j+1 - (j == numSlices - 1 ? numSlices : 0);
+                    indices[i*numSlices*6+j*6] = i*(numSlices+1)+j;
+                    indices[i*numSlices*6+j*6+1] = (i+1)*(numSlices+1)+j;
+                    indices[i*numSlices*6+j*6+2] = (i+1)*(numSlices+1)+j+1;
+                    indices[i*numSlices*6+j*6+3] = i*(numSlices+1)+j;
+                    indices[i*numSlices*6+j*6+4] = i*(numSlices+1)+j+1;
+                    indices[i*numSlices*6+j*6+5] = (i+1)*(numSlices+1)+j+1;
                 }
             }
 
