--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="gl-matrix.js"></script>
     <script>
         var cubeRotation = 0.0;
-        const numLayers = 50; //MUST be even; sorry .ω.
-        const numSlices = 1000;
+        const numLayers = 200; 
+        const numSlices = 200;
         main();
         //
         // start here
@@ -66,7 +66,7 @@
 
             const shaderProgram = initShaderProgram(gl, vsSource, fsSource);
 
-            const texture = loadTexture(gl, "2k_earth_daymap.jpg");
+            const texture = loadTexture(gl, "8k_earth_daymap.jpg");
             
             const programInfo = {
                 program: shaderProgram,
